# studio

./: Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/src/: main.rs
app/ui/: LandingWindow.slint  main.slint
app/ui/app/: LandingWindow.slint  WizardWindow.slint
app/ui/common/: fonts.slint
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/assets/images/logo/: logo.aseprite
crates/gui/src/: main.rs
crates/gui/ui/app/: LandingWindow.slint
crates/lib/: Cargo.toml
crates/lib/src/: bitmap_matrix.rs  lib.rs  project.rs  source_file.rs  workspace.rs
crates/lib/src/backend/: mod.rs
crates/lib/src/backend/opentype_ttf/: mod.rs
crates/lib/src/glyph/: bitmap_matrix.rs  math.rs  mod.rs  path.rs  pathfinder.rs
crates/yaff/: Cargo.toml  README.md
crates/yaff/src/: lib.rs  model.rs
crates/yaff/src/syntax/: comment.rs  document.rs  fragments.rs  glyph_definition.rs  mod.rs  property.rs
examples/bitkodi/: README.md  workspace.toml
examples/bitkodi/bitkodi-regular/: project.toml
examples/bitkodi/bitkodi-regular/src/blocks/Basic Latin/: punctuation-and-symbols.yaff
