[workspace]
resolver = "2"
members = ["crates/gui", "crates/cli", "crates/yaff", "crates/lib"]

[workspace.dependencies]
# monorepo
lib = { path = "./crates/lib" }
yaff = { path = "./crates/yaff" }

# error-handling
snafu = "0.8.5"
color-eyre = "0.6"
eyre = "0.6"

# common libs
clap = { version = "4.5.20", features = ["derive"] }
jiff = "0.1"
